# inferrs

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
backends/inferrs-backend-rocm/: Cargo.toml
backends/inferrs-backend-rocm/src/: lib.rs
candle-core/: Cargo.toml
candle-core/src/: device.rs  display.rs  dummy_rocm_backend.rs  error.rs  lib.rs  rocm_backend.rs  safetensors.rs  storage.rs  tensor.rs
candle-core/src/quantized/: ggml_file.rs  mod.rs
candle-nn/: Cargo.toml
hiparc/: Cargo.toml
hiparc/src/: lib.rs
inferrs/: Cargo.toml
inferrs-models/: Cargo.toml
inferrs-models/src/: multimodal_plugin.rs
inferrs-models/tests/: rocm_smoke.rs
inferrs-multimodal/: Cargo.toml
inferrs-multimodal/src/: ffi.rs
inferrs/src/: backend.rs  engine.rs  main.rs
