[package]
name = "inferrs-models"
version = "0.1.0"
edition = "2021"
description = "Shared model implementations and supporting types for inferrs"
license = "Apache-2.0"

[lib]
name = "inferrs_models"
path = "src/lib.rs"

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
rocm = [
    "candle-core/rocm",
    "candle-nn/rocm",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
half = { version = "2.5", features = ["num-traits"] }
libloading = "0.8"
memmap2 = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
